[tool.poetry]
name = "ev3-basically-a-tank"
version = "0.1.0"
description = ""
authors = ["Andy Maskiell <maskiella@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1"
pybricks = "^3.1.0"
python-ev3dev = "^1.2.0"
python-ev3dev2 = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "ev3_basically_a_tank"
testpaths = [
    "__tests__",
    "integration",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
